--- a/assets/css/destination.css
+++ b/assets/css/destination.css
@@ -76,7 +76,7 @@ header {
 .nav li {
   color: white;
   font-weight: 600;
-  padding: 20px;
+  padding: 30px 20px;
   text-wrap: nowrap;
 }
 .line {
@@ -292,6 +292,9 @@ aside h3 {
     opacity: 0;
     transition: all 0.5s linear;
     z-index: 1000000000;
+  }
+  .nav li {
+    padding: 20px;
   }
   .nav.active {
     transform: translate(0);
